use CSS to try and prevent extra horizontal scrolling

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -124,6 +124,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
